--- a/src/components/Bio.module.scss
+++ b/src/components/Bio.module.scss
@@ -1,10 +1,8 @@
 .root{
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1ch;
   flex-wrap: wrap;
-  height: 100%;
   margin: 0 auto;
   width: 100%;
 }
@@ -15,5 +13,10 @@
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%;
+  overflow: hidden;
+  overflow-Y: auto;
+  @media (max-width: 768px) {
+    align-items: flex-start;
+    max-height: calc(100vh - 45ch);
+  }
 }
